--- a/src/3-3.state-2.html
+++ b/src/3-3.state-2.html
@@ -20,6 +20,10 @@
                 setSelect(idx);
             }
 
+            const h = () => {
+                setSelect(select+1);
+            }
+
             return (
               <div>
                   {names.map((name, idx) => (
