--- a/src/2-2.react-with-babel.html
+++ b/src/2-2.react-with-babel.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <div id="app"></div>
+    <div id="app2"></div>
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <!-- Babel Script -->
@@ -8,6 +9,8 @@
     <script type="text/jsx">
       const app = document.getElementById('app');
       ReactDOM.render(<h1>Develop. Preview. Ship. 🚀</h1>, app);
+      const app2 = document.getElementById('app2');
+      ReactDOM.render(<h1>Develop. Preview. Ship2. 🚀</h1>, app2);
     </script>
   </body>
 </html>
